--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-  <button id="google-pay-button">Pay with Google Pay</button>
+  <head></head>
+  <body>
+    <button id="google-pay-button">Pay with Google Pay</button>
   <script src="https://pay.google.com/gp/p/api.js"></script>
 
 <script>
@@ -54,4 +56,5 @@
     });
   });
 </script>
+  </body>
 </html>
