--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
   <button id="google-pay-button">Pay with Google Pay</button>
-  <script src="https://pay.google.com/gp/p/api.js"></script>
+  <script
+  async
+  src="https://pay.google.com/gp/p/js/pay.js"
+  onload="console.log('TODO: add onload function')">
+</script>
 
 <script>
   // Define your Google Pay API version
